--- a/random_password_generator/src/components/passwordgenerator.css
+++ b/random_password_generator/src/components/passwordgenerator.css
@@ -20,6 +20,7 @@
   -webkit-user-select: none;
   touch-action: manipulation;
   will-change: transform;
+  margin: 0.2rem;
  }
  
  .button:disabled {
